maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while(!sortieTrouvee())
  {
    var nb=random3()
    if(nb==0)avance()
    else if(nb==1)droite()
    else gauche()
  }
}